examples/test/testpolicy12769.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12769
  namespace: namespace100
spec:
  podSelector:
    matchLabels:
      key20: value38
      key24: value10
      key18: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value42
      podSelector:
        matchLabels:
          key39: value46
          key37: value43
          key18: value6
